[gd_scene load_steps=4 format=3 uid="uid://tp0xdn2rk67y"]

[ext_resource type="Texture2D" uid="uid://r44xejvkk7ds" path="res://assets/UI/question_mark.png" id="1_blgqm"]
[ext_resource type="Script" path="res://scenes/prologue_cg.gd" id="1_pjvdj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxxmq"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[node name="PrologueCG" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pjvdj")

[node name="Page1" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -930.0
offset_right = 1786.0
offset_bottom = -14.0
grow_vertical = 0
columns = 5

[node name="PrologueRect1" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect2" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect3" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect4" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect5" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect6" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect7" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect8" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect9" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect10" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect10_11" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect11" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect12" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect12_13" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect13" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect14" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect15" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect16" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect17" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect18" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect19" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect20" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect21" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect22" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect23" type="TextureRect" parent="Page1"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="Page2" type="GridContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -930.0
offset_right = 1786.0
offset_bottom = -14.0
grow_vertical = 0
columns = 5

[node name="PrologueRect24" type="TextureRect" parent="Page2"]
visible = false
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect25" type="TextureRect" parent="Page2"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect26" type="TextureRect" parent="Page2"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect26_27" type="TextureRect" parent="Page2"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect27" type="TextureRect" parent="Page2"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect28" type="TextureRect" parent="Page2"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect29" type="TextureRect" parent="Page2"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueRect30" type="TextureRect" parent="Page2"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
texture = ExtResource("1_blgqm")
expand_mode = 1

[node name="PrologueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 589.0
offset_top = 13.0
offset_right = 849.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 60
text = "Prologue"

[node name="Page1Btn" type="Button" parent="PrologueLabel"]
layout_mode = 0
offset_left = 311.0
offset_top = 1.0
offset_right = 404.0
offset_bottom = 94.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_wxxmq")
text = "1"

[node name="Page2Btn" type="Button" parent="PrologueLabel"]
layout_mode = 0
offset_left = 435.0
offset_top = -1.0
offset_right = 528.0
offset_bottom = 92.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_wxxmq")
text = "2"

[node name="BackBtn" type="Button" parent="PrologueLabel"]
layout_mode = 0
offset_left = 588.0
offset_top = 19.0
offset_right = 868.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 40
text = "Back to Menu"

[node name="ImageViewer" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="Page1/PrologueRect1" to="." method="_on_prologue_rect_1_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect2" to="." method="_on_prologue_rect_2_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect3" to="." method="_on_prologue_rect_3_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect4" to="." method="_on_prologue_rect_4_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect5" to="." method="_on_prologue_rect_5_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect6" to="." method="_on_prologue_rect_6_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect7" to="." method="_on_prologue_rect_7_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect8" to="." method="_on_prologue_rect_8_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect9" to="." method="_on_prologue_rect_9_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect10" to="." method="_on_prologue_rect_10_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect10_11" to="." method="_on_prologue_rect_10_11_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect11" to="." method="_on_prologue_rect_11_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect12" to="." method="_on_prologue_rect_12_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect12_13" to="." method="_on_prologue_rect_12_13_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect13" to="." method="_on_prologue_rect_13_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect14" to="." method="_on_prologue_rect_14_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect15" to="." method="_on_prologue_rect_15_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect16" to="." method="_on_prologue_rect_16_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect17" to="." method="_on_prologue_rect_17_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect18" to="." method="_on_prologue_rect_18_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect19" to="." method="_on_prologue_rect_19_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect20" to="." method="_on_prologue_rect_20_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect21" to="." method="_on_prologue_rect_21_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect22" to="." method="_on_prologue_rect_22_gui_input"]
[connection signal="gui_input" from="Page1/PrologueRect23" to="." method="_on_prologue_rect_23_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect24" to="." method="_on_prologue_rect_24_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect25" to="." method="_on_prologue_rect_25_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect26" to="." method="_on_prologue_rect_26_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect26_27" to="." method="_on_prologue_rect_26_27_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect27" to="." method="_on_prologue_rect_27_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect28" to="." method="_on_prologue_rect_28_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect29" to="." method="_on_prologue_rect_29_gui_input"]
[connection signal="gui_input" from="Page2/PrologueRect30" to="." method="_on_prologue_rect_30_gui_input"]
[connection signal="pressed" from="PrologueLabel/Page1Btn" to="." method="_on_page_1_btn_pressed"]
[connection signal="pressed" from="PrologueLabel/Page2Btn" to="." method="_on_page_2_btn_pressed"]
[connection signal="pressed" from="PrologueLabel/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="gui_input" from="ImageViewer" to="." method="_on_image_viewer_gui_input"]
